# qs-master-applications

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DATA_LICENSE.md  LICENSE  README.md  README.zh-CN.md  app.js  calendar.html  calendar.js  contact.html  contact.js  dom.js  eslint.config.mjs  i18n.js  index.html  intake-filter.js  localization.js  package-lock.json  package.json  privacy.html  pyproject.toml  ranking-filter.js  roadmap.html  roadmap.js  state.js  status.js  strings.js  styles.css  window-grouping.js  wrangler.jsonc
.github/ISSUE_TEMPLATE/: report-data-error.yml  submit-programme-window.yml
.github/workflows/: discover-programmes.yml  notify-subscribers.yml  pages.yml  publish-monitor-status.yml  refresh-active-programmes.yml  refresh-global-rankings.yml  scan-programme-catalogues.yml  tests.yml  update-data.yml
data/: PROVENANCE.md  admissions-overrides.json  applicant-categories.json  application-source-state.json  applications.json  coverage.json  global-rankings.json  predictions.json  programme-groups.json  programme-translations.json  programs.json  review-queue.json  roadmap-proposals.json  ror-cache.json  sources.json  universities.json  window-candidates.json  window-policies.json
data/evidence/: aalto-computer-science-autumn-2026.json  aalto-university.json  brown-computer-science-scm-fall-2026.json  brown-university.json  cambridge-advanced-chemical-engineering-michaelmas-2026.json  cambridge-advanced-computer-science-michaelmas-2026.json  cambridge-advanced-materials-for-the-energy-transition-mphil-2026-main-deadline.json  cambridge-african-studies-mphil-2026-main-deadline.json  cambridge-american-history-mphil-2026-main-deadline.json  cambridge-anglo-saxon-norse-and-celtic-mphil-2026-main-deadline.json  cambridge-anthropocene-studies-mphil-2026-main-deadline.json  cambridge-archaeological-research-mphil-2026-main-deadline.json  (+1165 more)
data/ops/: application-source-state.json  (+6 more)
docs/: ANNOUNCEMENT_PLAYBOOK.md  CLOUDFLARE_PAGES.md  PROGRAMME_DISCOVERY_RULES.md  QS200_ROADMAP.md  TECHNICAL.md  TOP30_ROADMAP.md  assisted-discovery.md  operations-schedule.md
reports/: 2026-06-14.md
scripts/: build_cloudflare.py  discover_admissions.py  import_global_rankings.mjs  import_qs_top200.py  monitor_universities.py  notify_subscribers.py  submit_indexnow.py  test_data.py  update_data.py  update_localized_school_names.py  update_programme_translations.py
subscriptions/: README.md  core.js  schema.sql  worker.js  wrangler.toml.example
tests/: test_adapter_completion.py  test_adapter_schedule.py  test_anu_programme_adapter.py  test_approvals.py  test_assisted_discovery.py  test_auckland_programme_adapter.py  test_berkeley_programme_adapter.py  test_birmingham_programme_adapter.py  test_bristol_programme_adapter.py  test_brown_programme_adapter.py  test_caltech_programme_adapter.py  test_cambridge_programme_adapter.py  test_candidate_migration.py  test_candidate_review.py  test_cli_pipeline.py  test_cmu_programme_adapter.py  test_columbia_programme_adapter.py  test_cornell_programme_adapter.py  test_coverage.py  test_deadlines.py  test_discovery.py  test_edinburgh_programme_adapter.py  test_epfl_programme_adapter.py  test_eth_programme_adapter.py  test_frontend_calendar_export.py  test_frontend_dom.py  test_frontend_exceptions.py  test_frontend_intakes.py  test_frontend_localization.py  test_frontend_rankings.py  test_frontend_status.py  test_fudan_programme_adapter.py  test_generic_discovery_batch.py  test_generic_programme_adapter.py  test_generic_seed_discovery.py  test_glasgow_programme_adapter.py  test_global_rankings.py  test_harvard_programme_adapter.py  test_hku_programme_adapter.py  test_hkust_programme_adapter.py  (+75 more)
web/: CNAME  admin.html  admin.js  app.js  auth.js  calendar-export.js  calendar.html  calendar.js  contact.html  dom.js  exception-status.js  i18n.js  index.html  privacy.html  ranking-filter.js  review.js  roadmap.html  styles.css  window-grouping.js
(+283 files in other folders)
