[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradwindow"
version = "0.3.0"
description = "A transparent QS top-200 graduate application window tracker."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "GradWindow contributors" }]
keywords = ["graduate-admissions", "university", "deadlines", "qs-ranking"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "httpx>=0.27,<1",
  "pypdf>=6.13,<7",
  "pydantic>=2.8,<3",
  "tenacity>=8.2,<10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
import = ["pandas>=2.0", "openpyxl>=3.1"]

[project.scripts]
gradwindow = "gradwindow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
