[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradwindow"
version = "0.3.0"
description = "A transparent QS top-200 graduate application window tracker."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "GradWindow contributors" }]
keywords = ["graduate-admissions", "university", "deadlines", "qs-ranking"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "httpx>=0.27,<1",
  "openpyxl>=3.1,<4",
  "pdfplumber>=0.11.4,<0.12",
  "pypdf>=6.13,<7",
  "pydantic>=2.8,<3",
  "tenacity>=8.2,<10",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.14"]
import = ["pandas>=2.0"]

[project.scripts]
gradwindow = "gradwindow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = ["site", "data", "src/gradwindow.egg-info"]

[tool.ruff.lint]
# E501 (line length) is owned by the formatter; long data strings and URLs
# are left intact rather than wrapped.
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Maintenance scripts bootstrap sys.path before importing project modules.
"scripts/*" = ["E402"]
